@@ -10,10 +10,10 @@ unsigned int byte_chr(char *s, register unsigned int n, int c)
   ch = c;
   t = s;
   for (;;) {
-    if (!n) break; if (*t == ch) break; ++t; --n;
-    if (!n) break; if (*t == ch) break; ++t; --n;
-    if (!n) break; if (*t == ch) break; ++t; --n;
-    if (!n) break; if (*t == ch) break; ++t; --n;
+    if (!n) { break; } if (*t == ch) break; ++t; --n;
+    if (!n) { break; } if (*t == ch) break; ++t; --n;
+    if (!n) { break; } if (*t == ch) break; ++t; --n;
+    if (!n) { break; } if (*t == ch) break; ++t; --n;
   }
   return t - s;
 }
