@@ -7,9 +7,9 @@ void byte_copyr(register char *to,register unsigned int n,register char *from)
   to += n;
   from += n;
   for (;;) {
-    if (!n) return; *--to = *--from; --n;
-    if (!n) return; *--to = *--from; --n;
-    if (!n) return; *--to = *--from; --n;
-    if (!n) return; *--to = *--from; --n;
+    if (!n) { return; } *--to = *--from; --n;
+    if (!n) { return; } *--to = *--from; --n;
+    if (!n) { return; } *--to = *--from; --n;
+    if (!n) { return; } *--to = *--from; --n;
   }
 }
