@@ -2,13 +2,13 @@
 
 #include "byte.h"
 
-int byte_diff(register char *s,register unsigned int n,register char *t)
+int byte_diff(register const char *s,register unsigned int n,register const char *t)
 {
   for (;;) {
-    if (!n) return 0; if (*s != *t) break; ++s; ++t; --n;
-    if (!n) return 0; if (*s != *t) break; ++s; ++t; --n;
-    if (!n) return 0; if (*s != *t) break; ++s; ++t; --n;
-    if (!n) return 0; if (*s != *t) break; ++s; ++t; --n;
+    if (!n) { return 0; } if (*s != *t) break; ++s; ++t; --n;
+    if (!n) { return 0; } if (*s != *t) break; ++s; ++t; --n;
+    if (!n) { return 0; } if (*s != *t) break; ++s; ++t; --n;
+    if (!n) { return 0; } if (*s != *t) break; ++s; ++t; --n;
   }
   return ((int)(unsigned int)(unsigned char) *s)
        - ((int)(unsigned int)(unsigned char) *t);
