@@ -3,9 +3,9 @@
 void byte_zero(char *s,register unsigned int n)
 {
   for (;;) {
-    if (!n) break; *s++ = 0; --n;
-    if (!n) break; *s++ = 0; --n;
-    if (!n) break; *s++ = 0; --n;
-    if (!n) break; *s++ = 0; --n;
+    if (!n) { break; } *s++ = 0; --n;
+    if (!n) { break; } *s++ = 0; --n;
+    if (!n) { break; } *s++ = 0; --n;
+    if (!n) { break; } *s++ = 0; --n;
   }
 }
