@@ -8,9 +8,9 @@ unsigned int str_len(const char *s)
 
   t = s;
   for (;;) {
-    if (!*t) return t - s; ++t;
-    if (!*t) return t - s; ++t;
-    if (!*t) return t - s; ++t;
-    if (!*t) return t - s; ++t;
+    if (!*t) { return t - s; } ++t;
+    if (!*t) { return t - s; } ++t;
+    if (!*t) { return t - s; } ++t;
+    if (!*t) { return t - s; } ++t;
   }
 }
