@@ -1,3 +1,7 @@
+  * buffer_put.c, byte.h, byte_chr.c, byte_copy.c, byte_cr.c, byte_diff.c,
+    byte_rchr.c, byte_zero.c, str_chr.c, str_len.c: sync daemontools library
+    fork with runit source.
+
 socklog 2.1.2
 Sun, 02 Nov 2025 11:41:11 +0100
   * alloc.c, alloc_re.c, buffer_0.c, byte_chr.c, byte_copy.c, byte_cr.c,
